# crypto-realtime-pipeline

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: dbt.py  kafka.py  postgres.py  s3.py  spark.py
config/schemas/: crypto_trades.avsc
dags/: crypto_trades_realtime.py  dbt_crypto_transform.py  dev_fetch_datalake_sample.py  etl_export_gold_to_datalake.py  ops_check_connectivity.py  ops_init_infrastructure.py
dags/utils/: kafka_ops.py  postgres_ops.py  s3_ops.py
dbt/: README.md  dbt_project.yml  profiles.yml.example
dbt/seeds/: crypto_symbols.csv
docker/: Dockerfile.airflow  Dockerfile.spark  requirements_airflow.txt
docs/: README.md
docs/architecture/: airflow_workflows.md  data_flow.md  dbt_models.md  producers.md  spark_jobs.md
docs/business/: business_dashboard.md
docs/guides/: configuration.md  installation.md  runbook.md
docs/monitoring/: alerting_guide.md  monitoring_dashboard.md
monitoring/prometheus/: prometheus.yml
monitoring/spark_jmx/: spark-jmx-config.yml
producers/: main.py
producers/connectors/: binance_client.py  kafka_client.py  logging_config.py  schema_registry.py
producers/domain/: transformer.py
producers/sql/: ddl_raw.sql  indexing.sql
producers/tests/: test_transformer.py
spark_jobs/dependencies/: container.py  get_schema.py  spark_session.py
spark_jobs/jobs/: ingest_minio.py  ingest_postgres.py
spark_jobs/tests/: check_spark_connection.py  ingest_console.py
tests/: test_dag_integrity.py  test_get_schema.py
(+18 files in other folders)
